--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -1,4 +1,9 @@
-/* src/styles/index.css */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
@@ -8,7 +13,6 @@ body {
   
   .App {
     text-align: center;
-    padding: 20px;
   }
   
   .App-header {
