--- a/frontend/src/styles/ProcessFlow.css
+++ b/frontend/src/styles/ProcessFlow.css
@@ -1,70 +1,112 @@
 /* src/styles/ProcessFlow.css */
 
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
+
 .process-flow-container {
-    width: 80%;
-    margin: 20px auto;
-    text-align: center;
-  }
-  
-  h2 {
-    font-size: 2em;
-    margin-bottom: 10px;
-    color: #555;
-  }
-  
-  .subtext {
-    font-size: 1.1em;
-    color: #e6e600;
-    margin-bottom: 40px;
-  }
-  
-  .steps-container {
-    display: flex;
+  width: 100%;
+  max-width: 1200px;
+  margin: 40px auto;
+  padding: 0 20px;
+  text-align: center;
+}
+
+h2 {
+  font-size: 2.5em;
+  margin-bottom: 10px;
+  color: #333;
+}
+
+.subtext {
+  font-size: 1.2em;
+  color: #0033cc;
+  margin-bottom: 40px;
+}
+
+.steps-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.step {
+  display: flex;
+  align-items: flex-start;
+  margin-bottom: 30px;
+  width: 100%;
+  max-width: 800px;
+  position: relative;
+}
+
+.step-icon {
+  font-size: 2em;
+  color: #0033cc;
+  margin-right: 20px;
+  flex-shrink: 0;
+}
+
+.step-content {
+  text-align: left;
+}
+
+.step-content h3 {
+  font-size: 1.5em;
+  margin: 0 0 10px 0;
+  color: #333;
+  display: flex;
+  align-items: center;
+}
+
+.step-number {
+  font-size: 0.8em;
+  font-weight: bold;
+  background-color: #0033cc;
+  color: #fff;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 10px;
+}
+
+.step-content p {
+  font-size: 1em;
+  color: #555;
+  margin: 0;
+  line-height: 1.5;
+}
+
+.step-divider {
+  position: absolute;
+  left: 15px;
+  top: 50px;
+  bottom: -30px;
+  width: 2px;
+  background-color: #e0e0e0;
+}
+
+@media (max-width: 768px) {
+  .step {
     flex-direction: column;
     align-items: center;
+    text-align: center;
   }
-  
-  .step {
-    display: flex;
-    align-items: center;
-    margin-bottom: 30px;
-    width: 60%;
+
+  .step-icon {
+    margin-right: 0;
+    margin-bottom: 15px;
   }
-  
-  .step-number {
-    font-size: 1.5em;
-    font-weight: bold;
-    background-color: #333;
-    color: #fff;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-right: 20px;
-  }
-  
+
   .step-content {
-    text-align: left;
+    text-align: center;
   }
-  
+
   .step-content h3 {
-    font-size: 1.3em;
-    margin: 0;
-    color: #333;
+    justify-content: center;
   }
-  
-  .step-content p {
-    font-size: 1em;
-    color: #555;
-    margin: 5px 0 0 0;
-  }
-  
+
   .step-divider {
-    width: 2px;
-    height: 50px;
-    background-color: #333;
-    margin-left: 30px;
+    display: none;
   }
-  
+}
